# rosneuro_feedback_wheel

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: ControlWheel.cfg  TrainingWheel.cfg  Wheel.cfg
include/rosneuro_feedback_wheel/: Autopilot.h  ControlWheel.h  SingleWheel.h  TrainingWheel.h  TrialSequence.h
launch/: feedback.launch  feedback_control.launch  feedback_cybathlon.launch  feedback_evaluation.launch
src/: Autopilot.cpp  ControlWheel.cpp  SingleWheel.cpp  TrainingWheel.cpp  TrialSequence.cpp  controlwheel.cpp  singlewheel.cpp  trainingwheel.cpp
