<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_feedback_wheel</name>
  <version>0.0.1</version>
  <description>ROSNEURO feedback wheels with neurodraw</description>
  <author email="luca.tonin@unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>message_generation</depend>

  <depend>neurodraw</depend>
  <depend>rosneuro_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
	
</package>
